--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "node server.js"
-publish = "public"
+command = "npx json-server --watch db.json --port $PORT"
+publish = "public" 
