--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "npx json-server --watch db.json --port $PORT"
+command = "npx json-server --watch db.json --port 5173"
 publish = "public" 
